# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
gen_diff/: main.py
gen_diff/scripts/: gen_diff.py
gendiff/: __init__.py  diff.py  parse.py  view.py
gendiff/scripts/: gendiff.py
gendiff/view/: __init__.py  json.py  plain.py  stylish.py
tests/: test_gen_diff.py  test_gendiff.py  test_gendiff_json.py  test_hexlet.py
tests/fixtures/: file_complex1.yaml  file_complex2.yaml  json_complex_both_full.txt
